--- a/src/App.scss
+++ b/src/App.scss
@@ -11,8 +11,7 @@ body {
 
 .App {
     height: 100vh;
-    display: grid;
-    grid-template-rows: 40px 50px 1fr;
+    overflow: hidden;
     background-color: $board-bg-color;
 
     
