--- a/src/__setting.scss
+++ b/src/__setting.scss
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 
 
+$navbar-app-height: 5vh;
+$navbar-board-height: 6vh;
+$board-content-height: 88vh;
+
 $gap: 10px;
 $column-header-height: 36px;
 $column-footer-height: 36px;
 $column-border-radius: 5px;
 $card-border-radius: 4px;
+
+$column-height: calc(#{$board-content-height} - #{$gap * 2});
 
 
 $board-bg-color: #0079bf;
