--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -3,10 +3,10 @@
 
 
 .navbar-app {
+    height: $navbar-app-height;
     padding-left: $gap;
     display: flex;
     align-items: center;
-
     background-color: $appbar-bg-color;
     font-size: 1.5rem;
 }
