--- a/src/components/BoardContent/BoardContent.scss
+++ b/src/components/BoardContent/BoardContent.scss
@@ -1,9 +1,9 @@
 @import '__setting.scss';
 
 .board-content {
-    display: flex;
+    height: $board-content-height; 
     overflow-x: auto;
-    margin: 0 $gap $gap;
+    overflow-y: hidden;
 
     &::-webkit-scrollbar {
         -webkit-appearance: none;
@@ -16,6 +16,11 @@
     &::-webkit-scrollbar-thumb {
         background-color: $common-element-bg;
         border-radius: 8px;
+    }
+    .column-drop-preview {
+        background-color: rgba(150, 150, 200, 0.1);
+        border: 1px dashed #abc;
+        margin: 5px 45px 5px 5px;
     }
 
     
