--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -3,12 +3,7 @@
 .column {
     flex: 0 0 auto;
     width: 300px;
-    height: calc(100% - #{$gap});
-
-    &:not(:first-child) {
-        margin-left: $gap;
-    }
-
+    height: $column-height;
     margin-left: $gap;
 
     >* {
@@ -17,7 +12,7 @@
         padding: 0 8px;
     }
 
-    header {
+    header.column-drag-handle {
         padding-left: 15px;
         height: $column-header-height;
         line-height: $column-header-height;
@@ -25,6 +20,7 @@
         font-weight: bold;
         border-top-left-radius: $column-border-radius;
         border-top-right-radius: $column-border-radius;
+        cursor: pointer;
     }
 
     footer {
@@ -36,10 +32,9 @@
         border-bottom-right-radius: $column-border-radius;
     }
 
-    ul.card-list {
-        list-style-type: none;
+    .card-list {
         margin: 0;
-        max-height: calc(100% - #{$column-header-height} - #{$column-footer-height});
+        max-height: calc(#{$column-height} - #{$column-header-height} - #{$column-footer-height});
         overflow-y: auto;
 
         &::-webkit-scrollbar {
@@ -53,6 +48,19 @@
         &::-webkit-scrollbar-thumb {
             background-color: darken($list-bg-color, 15);
             border-right: 5px solid $list-bg-color;
+        }
+        .card-ghost {
+            transition: transform 0.18s ease;
+            transform: rotate(5deg);
+        }
+        .card-ghost-drop{
+            transition: transform 0.18s ease-in-out;
+            transform: rotateZ(0deg);
+        }
+        .card-drop-preview {
+            background-color: rgba(150, 150, 200, 0.1);
+            border: 1px dashed #abc;
+            margin: 5px;
         }
 }
 }
