--- a/src/__setting.scss
+++ b/src/__setting.scss
@@ -8,12 +8,12 @@ $board-content-height: 88vh;
 $gap: 10px;
 $column-header-height: 36px;
 $column-footer-height: 36px;
-$column-border-radius: 5px;
+$column-border-radius: 4px;
 $card-border-radius: 4px;
 
 $column-height: calc(#{$board-content-height} - #{$gap * 2});
 
-
+$app-main-text-color: #333;
 $board-bg-color: #0079bf;
 $appbar-bg-color: #0067a3;
 $list-bg-color: #ebecf0;
