--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -8,7 +8,6 @@
 
     >* {
         background-color: $list-bg-color;
-        color: #333;
         padding: 0 8px;
     }
 
@@ -30,6 +29,14 @@
         font-size: 16px;
         border-bottom-left-radius: $column-border-radius;
         border-bottom-right-radius: $column-border-radius;
+        color: #888;
+        .footer-actions {
+            margin-left: $gap;
+            cursor: pointer;
+            &:hover{
+                color: $app-main-text-color;
+            }
+        }
     }
 
     .card-list {
@@ -52,10 +59,12 @@
         .card-ghost {
             transition: transform 0.18s ease;
             transform: rotate(5deg);
+            font-weight: bold;
         }
         .card-ghost-drop{
             transition: transform 0.18s ease-in-out;
             transform: rotateZ(0deg);
+            font-weight: bold;
         }
         .card-drop-preview {
             background-color: rgba(150, 150, 200, 0.1);
