--- a/src/__setting.scss
+++ b/src/__setting.scss
@@ -16,5 +16,6 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
 $app-main-text-color: #333;
 $board-bg-color: #0079bf;
 $appbar-bg-color: #0067a3;
-$list-bg-color: #ebecf0;
+$column-bg-color: #ebecf0;
 $common-element-bg: rgba(255, 255, 255, .24);
+$alert-danger: #ee5253;
