--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -7,7 +7,7 @@
     margin-left: $gap;
 
     >* {
-        background-color: $list-bg-color;
+        background-color: $column-bg-color;
         padding: 0 8px;
     }
 
@@ -31,7 +31,7 @@
         border-bottom-right-radius: $column-border-radius;
         color: #888;
         .footer-actions {
-            margin-left: $gap;
+            margin-left: 5px;
             cursor: pointer;
             &:hover{
                 color: $app-main-text-color;
@@ -53,8 +53,8 @@
         }
 
         &::-webkit-scrollbar-thumb {
-            background-color: darken($list-bg-color, 15);
-            border-right: 5px solid $list-bg-color;
+            background-color: darken($column-bg-color, 15);
+            border-right: 5px solid $column-bg-color;
         }
         .card-ghost {
             transition: transform 0.18s ease;
