--- a/src/__setting.scss
+++ b/src/__setting.scss
@@ -15,6 +15,7 @@ $column-height: calc(#{$board-content-height} - #{$gap * 2});
 
 $app-main-text-color: #333;
 $board-bg-color: #0079bf;
+$input-border-color: #37a8ea;
 $appbar-bg-color: #0067a3;
 $column-bg-color: #ebecf0;
 $common-element-bg: rgba(255, 255, 255, .24);
