--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -2,20 +2,18 @@
 
 
 .card-item {
-    background-color: white;
     padding: $gap;
-    border-radius: $card-border-radius;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     margin-bottom: $gap;
+    background-color: white;
+    border-radius: $card-border-radius;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
 
     img.card-cover {
         display: block;
+        margin: -$gap 0 $gap (-$gap);
         width: calc(100% + 2 * #{$gap});
-        margin: -$gap 0 $gap (
-            -$gap
-        );
-    border-bottom-left-radius: $card-border-radius;
-    border-bottom-right-radius: $card-border-radius;
+        border-bottom-left-radius: $card-border-radius;
+        border-bottom-right-radius: $card-border-radius;
 }
 }
