--- a/src/components/Column/Column.scss
+++ b/src/components/Column/Column.scss
@@ -1,32 +1,73 @@
 @import '__setting.scss';
 
 .column {
-    flex: 0 0 auto;
     width: 300px;
-    height: $column-height;
+    flex: 0 0 auto;
     margin-left: $gap;
+    height: $column-height;
 
     >* {
-        background-color: $column-bg-color;
         padding: 0 8px;
+        background-color: $column-bg-color;
     }
 
     header.column-drag-handle {
-        padding-left: 15px;
+        display: flex;
+        padding: 0x 8px;
+        font-size: 16px;
+        cursor: pointer;
+        font-weight: bold;
         height: $column-header-height;
         line-height: $column-header-height;
-        font-size: 16px;
-        font-weight: bold;
         border-top-left-radius: $column-border-radius;
         border-top-right-radius: $column-border-radius;
-        cursor: pointer;
+        .column-title {
+            flex: 90%;
+        }
+        .column-dropdown-actions {
+            flex: 10%;
+            .dropdown{
+
+                button.dropdown-btn{
+                    height: 32px;
+                    padding: 0 $gap;
+                    font-size: 16px;
+                    margin-top: -10px;
+                    font-weight: bold;
+                    letter-spacing: 1px;
+                    color: $app-main-text-color;
+                    border-color: $column-bg-color;
+                    background-color: $column-bg-color;
+                    &::after{
+                        content:'...';
+                        border: none;
+                    }
+                    &:hover{
+                        border-color: darken($color: $column-bg-color, $amount: 10);
+                        background-color: darken($color: $column-bg-color, $amount: 10);
+    
+                    }
+                }
+            }
+            .dropdown-menu {
+                padding: 0;
+                min-width: 200px;
+                a.dropdown-item {
+                    font-size: 14px;
+                    padding: 0.1rem 1rem;
+                    &:not(:last-child) {
+                        border-bottom: 1px solid darken($color: $column-bg-color, $amount: 10);
+                    }
+                }
+            }
+        }
     }
 
     footer {
-        padding-left: 15px;
+        padding-left: $gap;
+        min-height: $gap;
         height: $column-footer-height;
         line-height: $column-footer-height;
-        font-size: 16px;
         border-bottom-left-radius: $column-border-radius;
         border-bottom-right-radius: $column-border-radius;
         color: #888;
@@ -70,6 +111,12 @@
             background-color: rgba(150, 150, 200, 0.1);
             border: 1px dashed #abc;
             margin: 5px;
+        }
+        .add-new-card-area{
+            .textarea-enter-new-card{
+                min-height: 54px;
+                max-height: 162px;
+            }
         }
 }
 }
